# dip

./: .gitignore  Build.bat  CMakeLists.txt  GetVcpkg.bat  README.md  main.cpp  notes.md  ui.cpp  ui.hpp  vcpkg.json
assets/ppm/: cameraman2.ppm
assets/shaders/: basic.frag  basic.vert
doc/: Convolution.md  Discrete Fourier Transform.md  Euler's Formula and Identity.md  FFT.md  Fourier Series.md  Fourier Transform.md  Histogram Equilization.md  Morphological Image Processing.md  PT3_ANALYSIS.xlsx  Pixel Relationships.md  README.md  Sampling.md  Spatial Filtering.md  Untitled 1.md
doc/.obsidian/: workspace.json
doc/Watermark Removal/: Backpropagation in Multi Layer Perceptron.md  Convolutional Neural Network.md  Feed Forward Neural Network.md  Two Stage Watermark Removal.md
include/core/: framerate.hpp  glfw_context.hpp  input_manager.hpp  startup_config.hpp
include/data_formats/: vertex_format.hpp
include/os/: browse_dialog.hpp  sleeper.hpp
include/render/: material.hpp  opengl_model.hpp  opengl_texture.hpp  program_uniforms.hpp  quad_mesh.hpp  render_list.hpp  shader.hpp  shader_program.hpp  vram_texture.hpp
include/renderer/: additional_material_property.hpp  opengl_mesh.hpp  opengl_model.hpp  opengl_texture.hpp  program_info.hpp  program_uniforms.hpp  quad_mesh.hpp  renderer.hpp  shader.hpp  shader_program.hpp  vram_texture.hpp
include/util/: read_file.hpp  sign.hpp
src/: CMakeLists.txt
src/core/: CMakeLists.txt  cursor_state.cpp  cursor_state.hpp  frame_limiter.cpp  frame_limiter.hpp  frame_timer.cpp  frame_timer.hpp  framerate.cpp  glfw_context.cpp  input_manager.cpp  startup_config.cpp
src/dip/: CMakeLists.txt  app.cpp  app.hpp  ccl.cpp  ccl.hpp  command_interpreter.cpp  command_interpreter.hpp  connectivity.hpp  dft.cpp  dft.hpp  fft.cpp  fft.hpp  main.cpp  mat_tostring.hpp  operation.hpp  ui.cpp  ui.hpp
src/os/: CMakeLists.txt  browse_dialog.cpp  portable-file-dialogs.h  sleeper.cpp  sleeper.hpp  symbols.hpp
src/render/: CMakeLists.txt  additional_material_property.cpp  additional_material_property.hpp  opengl_mesh.hpp  pass.cpp  pass.hpp  program_info.cpp  program_info.hpp  program_uniforms.cpp  quad_mesh.cpp  renderer.cpp  renderer.hpp  shader.cpp  shader_program.cpp  vram_texture.cpp  vram_texture.hpp
src/renderer/: CMakeLists.txt  additional_material_property.cpp  program_info.cpp  program_uniforms.cpp  quad_mesh.cpp  renderer.cpp  shader.cpp  shader_program.cpp  vram_texture.cpp
src/util/: constants.hpp  debounce.hpp  running_average.hpp  string_table.hpp
